(GWindows) open target directory after extraction

--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -68,7 +68,7 @@ Menu_MDI_Child MENU
         MENUITEM "&Find in archive...\tCtrl+F", IDM_FIND_IN_ARCHIVE
         MENUITEM SEPARATOR
         MENUITEM "&Update archive\tCtrl+P", IDM_UPDATE_ARCHIVE
-        MENUITEM "&Recompress archive", IDM__RECOMPRESS_ARCHIVE
+        MENUITEM "&Recompress archive\tCtrl+R", IDM__RECOMPRESS_ARCHIVE
         MENUITEM "T&ouch time stamps", IDM_Touch_Time_Stamps, GRAYED
         MENUITEM "Encr&ypt archive", IDM_Encrypt_Archive, GRAYED
         MENUITEM SEPARATOR
@@ -341,6 +341,7 @@ Main_Menu ACCELERATORS
     VK_ADD,        IDM_ADD_FILES, VIRTKEY
     VK_F12,        IDM_SAVE_ARCHIVE_AS, VIRTKEY
     "P",            IDM_UPDATE_ARCHIVE, VIRTKEY, CONTROL
+    "R",            IDM__RECOMPRESS_ARCHIVE, VIRTKEY, CONTROL
     "D",            IDM_Properties, VIRTKEY, CONTROL
 }
 
@@ -387,8 +388,8 @@ Plus_icon          ICON           "ico_bmp/plus.ico"
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 VERSIONINFO
-    FILEVERSION     1,32,0,0
-    PRODUCTVERSION  1,32,0,0
+    FILEVERSION     2,0,0,0
+    PRODUCTVERSION  2,0,0,0
     FILEOS          VOS_UNKNOWN
     FILETYPE        VFT_UNKNOWN
     FILESUBTYPE     VFT2_UNKNOWN
@@ -401,7 +402,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
         {
             VALUE "Authors", "Gautier de Montmollin"
             VALUE "FileDescription", "AZip - A portable Zip Archive Manager - Free, MIT license"
-            VALUE "FileVersion", "1.32"
+            VALUE "FileVersion", "2.00"
             VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2016"
             VALUE "ProductName", "AZip"
         }
