(gwindows) drop to main window with maximized child window means: drop to active child window

--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -199,7 +199,7 @@ FONT 8, "Ms Shell Dlg"
     AUTOCHECKBOX    " Encrypt data in archive", Encrypt_check_box, 205, 100, 123, 16, 0, WS_EX_LEFT
     LTEXT           "Add dropped file(s) to...", 0, 31, 7, 250, 14, SS_LEFT, WS_EX_LEFT
     ICON            Key_Icon, 0, 178, 98, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT           "(Archive name here)", Drop_archive_name, 39, 29, 285, 29, SS_LEFT, WS_EX_LEFT
+    LTEXT           "(Archive name here)", Drop_archive_name, 39, 26, 285, 32, SS_LEFT, WS_EX_LEFT
     LTEXT           "NB: This is a new archive: Zip file not yet created. You'll be asked first under which name the archive will be created.", New_archive_msg, 45, 65, 272, 21, NOT WS_VISIBLE | SS_LEFT, WS_EX_STATICEDGE
     PUSHBUTTON      "No", IDCANCEL, 87, 95, 63, 18, 0, WS_EX_LEFT
     DEFPUSHBUTTON   "Yes", IDOK, 10, 95, 63, 18, 0, WS_EX_LEFT
@@ -411,8 +411,8 @@ Plus_icon          ICON           "ico_bmp/plus.ico"
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 VERSIONINFO
-    FILEVERSION     2,1,1,0
-    PRODUCTVERSION  2,1,1,0
+    FILEVERSION     2,1,4,0
+    PRODUCTVERSION  2,1,4,0
     FILEOS          VOS_UNKNOWN
     FILETYPE        VFT_UNKNOWN
     FILESUBTYPE     VFT2_UNKNOWN
@@ -425,7 +425,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
         {
             VALUE "Authors", "Gautier de Montmollin"
             VALUE "FileDescription", "AZip - A portable Zip Archive Manager - Free, MIT license"
-            VALUE "FileVersion", "2.12b"
+            VALUE "FileVersion", "2.14"
             VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2017"
             VALUE "ProductName", "AZip"
         }
