--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -301,7 +301,7 @@ FONT 8, "Ms Shell Dlg"
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-Properties_box DIALOG 0, 0, 265, 157
+Properties_box DIALOG 0, 0, 265, 166
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
 CAPTION "Archive properties"
 FONT 8, "Ms Shell Dlg"
@@ -314,7 +314,8 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "Entries", 02, 14, 40, 78, 13, SS_LEFT, WS_EX_LEFT
     LTEXT           "# entries", Numb_entries, 97, 40, 84, 12, SS_LEFT, WS_EX_LEFT
     CONTROL         "", Stats_list, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT, 14, 56, 236, 81, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK", IDOK, 111, 140, 50, 14, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 51, 142, 64, 19, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "About AZip", ID_Button_About_Azip, 145, 142, 64, 19, 0, WS_EX_LEFT
 }
 
 
