--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -93,6 +93,7 @@ Menu_MDI_Child MENU
     {
         MENUITEM "&Quick help", IDM_Quick_Help
         MENUITEM "AZip &Web page (contact, support)", IDM_Web
+        MENUITEM "AZip &news", IDM_AZip_Web_news
         MENUITEM SEPARATOR
         MENUITEM "&About AZip", IDM__ABOUT
     }
@@ -134,6 +135,7 @@ Menu_MDI_Main MENU
     {
         MENUITEM "&Quick help", IDM_Quick_Help
         MENUITEM "AZip &Web page (contact, support)", IDM_Web
+        MENUITEM "AZip &news", IDM_AZip_Web_news
         MENUITEM SEPARATOR
         MENUITEM "&About AZip", IDM__ABOUT
     }
@@ -326,8 +328,10 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "AZip Quick Help"
 FONT 8, "Ms Shell Dlg"
 {
+    GROUPBOX        "Using AZip as a portable software", 0, 17, 84, 348, 66, 0, WS_EX_LEFT
+    LTEXT           "AZip doesn't require any installation. It can even run from a USB stick for instance. For convenience, by default, it writes user settings in the registry. If you want the registry NOT being written to, you can add a file azip.cfg (can be emtpy) in the same directory as azip*.exe. User settings will be recorded there. If the file is read-only, it simply won't be changed (and settings not saved).", 0, 40, 99, 316, 33, SS_LEFT, WS_EX_LEFT
     LTEXT           "Here is a couple of tips and informations.", 0, 6, 8, 302, 20, SS_LEFT, WS_EX_LEFT
-    GROUPBOX        "Adding files and folders", 0, 16, 27, 349, 54, 0, WS_EX_LEFT
+    GROUPBOX        "Adding files and folders", GB1, 16, 27, 349, 54, 0, WS_EX_LEFT
     ICON            Plus_icon, 1, 23, 41, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "You can add files, or individual folders through menu commands or buttons, BUT you can also do it easily via Drag && Drop, from a File Explorer window or the Desktop, onto an AZip archive window. Any mix of dragged folders and files is supported.", 0, 59, 42, 291, 32, SS_LEFT, WS_EX_LEFT
     DEFPUSHBUTTON   "OK", IDOK, 137, 177, 107, 19, 0, WS_EX_LEFT
@@ -420,8 +424,8 @@ Plus_icon          ICON           "ico_bmp/plus.ico"
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 VERSIONINFO
-    FILEVERSION     2,1,5,0
-    PRODUCTVERSION  2,1,5,0
+    FILEVERSION     2,2,0,0
+    PRODUCTVERSION  2,2,0,0
     FILEOS          VOS_UNKNOWN
     FILETYPE        VFT_UNKNOWN
     FILESUBTYPE     VFT2_UNKNOWN
@@ -434,7 +438,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
         {
             VALUE "Authors", "Gautier de Montmollin"
             VALUE "FileDescription", "AZip - A portable Zip Archive Manager - Free, MIT license"
-            VALUE "FileVersion", "2.15"
+            VALUE "FileVersion", "2.20"
             VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2018"
             VALUE "ProductName", "AZip"
         }
