--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -197,10 +197,10 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "File(s) dropped"
 FONT 8, "Ms Shell Dlg"
 {
-    ICON            Plus_icon, 1, 2, 2, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Plus_icon, IDC_STATIC, 2, 2, 21, 20, SS_ICON, WS_EX_LEFT
     AUTOCHECKBOX    " Encrypt data in archive", Encrypt_check_box, 205, 100, 123, 16, 0, WS_EX_LEFT
     LTEXT           "Add dropped file(s) to...", 0, 31, 7, 250, 14, SS_LEFT, WS_EX_LEFT
-    ICON            Key_Icon, 0, 178, 98, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Key_Icon, IDC_STATIC, 178, 98, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "(Archive name here)", Drop_archive_name, 39, 26, 285, 32, SS_LEFT, WS_EX_LEFT
     LTEXT           "NB: This is a new archive: Zip file not yet created. You'll be asked first under which name the archive will be created.", New_archive_msg, 45, 65, 272, 21, NOT WS_VISIBLE | SS_LEFT, WS_EX_STATICEDGE
     PUSHBUTTON      "No", IDCANCEL, 87, 95, 63, 18, 0, WS_EX_LEFT
@@ -235,10 +235,10 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "Find"
 FONT 8, "Ms Shell Dlg"
 {
-    ICON            Binoculars_Icon, 0, 9, 12, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Binoculars_Icon, IDC_STATIC, 9, 12, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "Entry &name ( if empty: all names )", IDC_STATIC, 44, 7, 172, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        Name_to_be_searched, 44, 20, 172, 12, ES_AUTOHSCROLL, WS_EX_LEFT
-    ICON            Binoculars_Icon, 1, 9, 46, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Binoculars_Icon, IDC_STATIC, 9, 46, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "&Content ( if empty: any content )", IDC_STATIC, 44, 41, 172, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        Content_to_be_searched, 44, 54, 172, 12, ES_AUTOHSCROLL, WS_EX_LEFT
     DEFPUSHBUTTON   "OK", IDOK, 111, 76, 50, 14, 0, WS_EX_LEFT
@@ -257,7 +257,7 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "(name)", Encrypted_entry, 26, 21, 175, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "The current password is invalid.", IDC_STATIC, 12, 42, 159, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "Please enter the correct password:", IDC_STATIC, 12, 58, 159, 8, SS_LEFT, WS_EX_LEFT
-    ICON            Key_Icon, 0, 12, 70, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Key_Icon, IDC_STATIC, 12, 70, 21, 20, SS_ICON, WS_EX_LEFT
     EDITTEXT        Password_edit, 46, 73, 172, 13, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_LEFT
     AUTOCHECKBOX    "Show password", Show_password_box, 12, 97, 96, 8, 0, WS_EX_LEFT
     DEFPUSHBUTTON   "OK", IDOK, 112, 119, 50, 14, 0, WS_EX_LEFT
@@ -279,7 +279,7 @@ FONT 8, "Ms Shell Dlg"
     EDITTEXT        Password_confirm_edit, 46, 73, 172, 13, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_LEFT
     ICON            Key_Icon, Confirm_Icon, 12, 70, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "Confirm password:", Confirm_Password_Label, 12, 58, 153, 8, SS_LEFT, WS_EX_LEFT
-    ICON            Key_Icon, 0, 12, 30, 21, 20, SS_ICON, WS_EX_LEFT
+    ICON            Key_Icon, IDC_STATIC, 12, 30, 21, 20, SS_ICON, WS_EX_LEFT
     LTEXT           "Enter password:", IDC_STATIC, 12, 18, 151, 8, SS_LEFT, WS_EX_LEFT
 }
 
@@ -324,17 +324,19 @@ FONT 8, "Ms Shell Dlg"
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Quick_help_box DIALOG 0, 0, 375, 202
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "AZip Quick Help"
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP
+CAPTION "AZip Quick Help - a couple of tips and informations..."
 FONT 8, "Ms Shell Dlg"
 {
-    GROUPBOX        "Using AZip as a portable software", 0, 17, 84, 348, 66, 0, WS_EX_LEFT
-    LTEXT           "AZip doesn't require any installation. It can even run from a USB stick for instance. For convenience, by default, it writes user settings in the registry. If you want the registry NOT being written to, you can add a file azip.cfg (can be emtpy) in the same directory as azip*.exe. User settings will be recorded there. If the file is read-only, it simply won't be changed (and settings not saved).", 0, 40, 99, 316, 33, SS_LEFT, WS_EX_LEFT
-    LTEXT           "Here is a couple of tips and informations.", 0, 6, 8, 302, 20, SS_LEFT, WS_EX_LEFT
-    GROUPBOX        "Adding files and folders", GB1, 16, 27, 349, 54, 0, WS_EX_LEFT
-    ICON            Plus_icon, 1, 23, 41, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT           "You can add files, or individual folders through menu commands or buttons, BUT you can also do it easily via Drag && Drop, from a File Explorer window or the Desktop, onto an AZip archive window. Any mix of dragged folders and files is supported.", 0, 59, 42, 291, 32, SS_LEFT, WS_EX_LEFT
+    GROUPBOX        "Using AZip as a portable software", IDC_STATIC, 4, 106, 365, 66, 0, WS_EX_LEFT
+    LTEXT           "AZip doesn't require any installation. It can even run from a USB stick for instance. For convenience, by default, it writes user settings in the registry, as standard Windows software does. If you want the registry NOT being written to, you can add a file, azip.cfg (can be empty), in the same directory as azip*.exe. User settings will be recorded there. If the file is read-only, it simply won't be changed, and settings won't be saved.", 0, 27, 121, 337, 43, SS_LEFT, WS_EX_LEFT
+    GROUPBOX        "Adding files and folders", IDC_STATIC, 3, 3, 366, 46, 0, WS_EX_LEFT
+    ICON            Plus_icon, IDC_STATIC, 10, 17, 21, 20, SS_ICON, WS_EX_LEFT
+    LTEXT           "You can add files, or individual folders through menu commands (+) or buttons. BUT: you can also do it easily via Drag && Drop, from a Windows Explorer window or the Desktop, onto an AZip archive window. Any mix of dragged folders and files is supported.", 0, 46, 18, 316, 29, SS_LEFT, WS_EX_LEFT
     DEFPUSHBUTTON   "OK", IDOK, 137, 177, 107, 19, 0, WS_EX_LEFT
+    GROUPBOX        "Unpacking files", IDC_STATIC, 5, 57, 364, 46, 0, WS_EX_LEFT
+    ICON            Drag_Unpack_Icon, IDC_STATIC, 12, 71, 21, 20, SS_ICON, WS_EX_LEFT
+    LTEXT           "You can extract selected files, the selected folder, or the entire archive via the Extract command (Ctrl+E) or a button. BUT: you can also extract files via Drag && Drop to a Windows Explorer window or to the Desktop.", 0, 48, 72, 316, 28, SS_LEFT, WS_EX_LEFT
 }
 
 
@@ -364,9 +366,12 @@ Main_Menu ACCELERATORS
     "U",            IDM_Unselect_all, VIRTKEY, CONTROL
     "E",            IDM_EXTRACT, VIRTKEY, CONTROL
     VK_DELETE,     IDM_Delete_selected, VIRTKEY
+    VK_SUBTRACT,   IDM_Delete_selected, VIRTKEY
+    "-",            IDM_Delete_selected, ASCII
     "T",            IDM_TEST_ARCHIVE, VIRTKEY, CONTROL
     "F",            IDM_FIND_IN_ARCHIVE, VIRTKEY, CONTROL
     VK_ADD,        IDM_ADD_FILES, VIRTKEY
+    "+",            IDM_ADD_FILES, ASCII
     VK_F12,        IDM_SAVE_ARCHIVE_AS, VIRTKEY
     "P",            IDM_UPDATE_ARCHIVE, VIRTKEY, CONTROL
     "R",            IDM__RECOMPRESS_ARCHIVE, VIRTKEY, CONTROL
@@ -408,6 +413,10 @@ AZip_Icon          ICON           "ico_bmp/azip.ico"
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 Binoculars_Icon    ICON           "ico_bmp/find.ico"
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+Drag_Unpack_Icon   ICON           "ico_bmp/drag_unpack.ico"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
