--- a/gwindows/azip.rc
+++ b/gwindows/azip.rc
@@ -25,6 +25,17 @@ Toolbar_BMP        BITMAP         "ico_bmp/az_tools.bmp"
 //
 // Menu resources
 //
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+Fake_menu_for_commands_in_no_real_menu MENU
+{
+    POPUP "Fake"
+    {
+        MENUITEM "Toggle Flat / Tree view", IDM_Toggle_Flat_Tree_View
+    }
+}
+
+
+
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 Menu_MDI_Child MENU
 {
@@ -435,8 +446,8 @@ Plus_icon          ICON           "ico_bmp/plus.ico"
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 1 VERSIONINFO
-    FILEVERSION     2,2,0,0
-    PRODUCTVERSION  2,2,0,0
+    FILEVERSION     2,2,5,0
+    PRODUCTVERSION  2,2,5,0
     FILEOS          VOS_UNKNOWN
     FILETYPE        VFT_UNKNOWN
     FILESUBTYPE     VFT2_UNKNOWN
@@ -449,7 +460,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
         {
             VALUE "Authors", "Gautier de Montmollin"
             VALUE "FileDescription", "AZip - A portable Zip Archive Manager - Free, MIT license"
-            VALUE "FileVersion", "2.20"
+            VALUE "FileVersion", "2.25"
             VALUE "LegalCopyright", "Copyright © Gautier de Montmollin 2012 .. 2018"
             VALUE "ProductName", "AZip"
         }
